Revert "prefs: align labels and lists fixes #1365"
This reverts commit 22f770bc05507ace000487292c0c553ac7274793.

--- a/src/chrome/komodo/skin/prefs/prefs.css
+++ b/src/chrome/komodo/skin/prefs/prefs.css
@@ -58,8 +58,3 @@ groupbox#pref-languages-primary-selector-groupbox.collapse {
 {
     outline: 1px solid red;
 }
-
-#ui_tabs_sidepanes_groupbox > box
-{
-    float: left;
-}
